<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout

        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/mcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default"
                android:paddingBottom="@dimen/common_padding_default">

                <ImageView

                    android:id="@+id/iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_imagen_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/holo_purple"/>

                <TextView

                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/iv"
                    android:text="@string/nombre_esttik"/>

                <TextView

                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    android:text="@string/descripcion_esttik"/>

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/mbWikipedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/wikipedia"
                    app:icon="@drawable/ic_wikipedia"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/mcv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/cl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default"
                android:paddingBottom="@dimen/common_padding_default">

                <ImageView

                    android:id="@+id/iv2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_imagen_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/holo_purple"/>

                <TextView

                    android:id="@+id/tvTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/iv2"
                    android:text="@string/nombre_viktor"/>

                <TextView

                    android:id="@+id/tvDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
                    android:text="@string/descripcion_viktor"/>

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/mbWikipedia2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/wikipedia"
                    app:icon="@drawable/ic_wikipedia"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/mcv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/cl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default"
                android:paddingBottom="@dimen/common_padding_default">

                <ImageView

                    android:id="@+id/iv3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_imagen_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/holo_purple"/>

                <TextView

                    android:id="@+id/tvTitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/iv3"
                    android:text="@string/nombre_chris"/>

                <TextView

                    android:id="@+id/tvDescription3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle3"
                    android:text="@string/descripcion_chris"/>

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/mbWikipedia3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription3"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/wikipedia"
                    app:icon="@drawable/ic_wikipedia"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/mcv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/cl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default"
                android:paddingBottom="@dimen/common_padding_default">

                <ImageView

                    android:id="@+id/iv4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_imagen_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/holo_purple"/>

                <TextView

                    android:id="@+id/tvTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/iv4"
                    android:text="@string/nombre_pablo"/>

                <TextView

                    android:id="@+id/tvDescription4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle4"
                    android:text="@string/descripcion_pablo"/>

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/mbWikipedia4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription4"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/wikipedia"
                    app:icon="@drawable/ic_wikipedia"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>